# SA_api_gateway

./: .env  docker-compose.yml  main.py  pyproject.toml
nginx/: nginx.conf
src/gateway/: models.py  repository.py  router.py  service.py
src/settings/: database.py  depends.py  exceptions.py  models.py  repository.py  service.py  settings.py
